tests/NormalTests/paczka1/small_fuzzy/52325758.err
Error in line 5: 591 
Error in line 6: 591 55,0
Error in line 7: A92gtCUCC S63 35,9
